fix text align of top performers on dashboard

--- a/src/components/topers/styles.css
+++ b/src/components/topers/styles.css
@@ -23,15 +23,28 @@
     justify-content: start;
 }
 
+
 .topers .topper:nth-of-type(1) .board{
     transform: skewX(10deg);
 }
 .topers .topper:nth-of-type(2) .board{
     height: 260px;
     transform: skewY(-10deg);
+    padding-top: 50px;
 }
 .topers .topper:nth-of-type(3) .board{
     transform: skewY(15deg) rotateZ(10deg);
+}
+
+/* correcting skew of text */
+.topers .topper:nth-of-type(1) .board p{
+    transform: skewX(-10deg);
+}
+.topers .topper:nth-of-type(2) .board p{
+    transform: skewY(10deg);
+}
+.topers .topper:nth-of-type(3) .board p{
+    transform: skewY(-15deg) rotateZ(-10deg);
 }
 
 .topers .board p:nth-of-type(1){
